# master_project

./: script_log.py
esp_cam/: README.md  sdkconfig
esp_cam/ESP_LOG/: esp_logging.c  esp_logging.h  esp_logging_buffer.c  esp_logging_buffer.h
esp_cam/ESP_MOTION/: motion.c
esp_cam/ESP_NET/: wifi.c  wifi.h
esp_cam/ESP_TIME/: esp_time.c  esp_time.h
esp_cam/ESP_WEB/: esp_web.c  socket.c
esp_cam/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp_project/: README.md  sdkconfig
esp_project/ESP_LOG/: esp_logging.c  esp_logging.h  esp_logging_buffer.c  esp_logging_buffer.h
esp_project/ESP_NET/: wifi.c
esp_project/ESP_SENSORS/BMP280/: bmp280.c  bmp280.h  bmx280_bits.h
esp_project/ESP_SENSORS/BUZZER/: buzzer.c  buzzer.h
esp_project/ESP_SENSORS/HC_SR04/: hc_sr04.c  hc_sr04.h
esp_project/ESP_SENSORS/MOTION/: motion.h
esp_project/ESP_TIME/: esp_time.c  esp_time.h
esp_project/ESP_WEB/: esp_web.c  esp_web.h
esp_project/ESP_WEB/HTTP_CLIENT/: esp_web.c  esp_web.h
esp_project/ESP_WEB/WEB_SOCKET/: socket.c  socket.h
esp_project/main/: CMakeLists.txt  Kconfig.projbuild  main.c
logging_lib/: buffer.c  buffer.h  esp_logging.c  esp_logging.h  esp_logging_buffer.c  esp_logging_buffer.h  logging_lib.c  logging_lib.h
web_server/: app.js  database.js  package-lock.json  package.json
web_server/public/javascripts/: script.js
web_server/public/stylesheets/: style.css
web_server/python_decoder/: cam_wifi.txt  esp_bmp.txt  esp_cam  esp_main.txt  esp_time.txt  log_from_esp.txt  log_from_esp_cam.txt  script1.py
web_server/routes/: index.js
web_server/views/: index.pug  layout.pug  viewImage.pug
